@@ -9,6 +9,13 @@ Here is a history of user visible changes to Mailman.
 
   New Features
 
+    - There is a new list attribute author_is_list to rewrite the From: header
+      of posts replacing the posters address with that of the list for
+      compatability with DMARC and or ADSP.  There is a new mm_cfg.py setting
+      DEFAULT_AUTHOR_IS_LIST to control the default for new lists, and the
+      existing REMOVE_DKIM_HEADERS setting has been extended to allow removing
+      those headers only for author_is_list = Yes lists.
+
     - There is a new DISPLAY_HELD_SUMMARY_SORT_BUTTONS setting which if set
       to Yes in mm_cfg.py will display a set of radio buttons in the admindb
       held message summary to select how the held messages are sorted and
